// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`happy path prepend-string 1`] = `
"# THIS IS AN AUTOGENERATED FILE. DO NOT EDIT THIS FILE DIRECTLY.
# yarn lockfile v1


"
`;

exports[`happy path prepend-string 2`] = `
"module.exports = {
  transform({source}) {
    return \`/* prefix */\\\\n\${source}\`;
  }
};"
`;

exports[`happy path prepend-string 3`] = `"module.exports = ({source}) => \`/* prefix */\\\\n\${source}\`;"`;

exports[`happy path prepend-string 4`] = `
"/* prefix */
console.log('a');"
`;

exports[`happy path prepend-string 5`] = `
"/* prefix */
function b() {}"
`;
